Add UsersAPITest and ExpirationToolTest

--- a/pom.xml
+++ b/pom.xml
@@ -67,14 +67,20 @@
       <artifactId>junit-vintage-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-     </dependency>
-     <dependency>
+    </dependency>
+    <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-unit</artifactId>
        <version>${vertx.version}</version>
        <scope>test</scope>
        <type>jar</type>
-     </dependency>
+    </dependency>
+    <dependency>
+       <groupId>io.vertx</groupId>
+       <artifactId>vertx-junit5</artifactId>
+       <version>${vertx.version}</version>
+       <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
