--- a/pom.xml
+++ b/pom.xml
@@ -479,7 +479,7 @@
     <vertx.version>3.9.0</vertx.version>
     <junit.version>5.5.2</junit.version>
     <rest-assured.version>3.3.0</rest-assured.version>
-    <folio-service-tools.version>1.3.1</folio-service-tools.version>
+    <folio-service-tools.version>1.4.4-SNAPSHOT</folio-service-tools.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
   </properties>
 </project>
