--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-custom-fields</artifactId>
-      <version>1.3.1-SNAPSHOT</version>
+      <version>${mod-custom-fields.version}</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
@@ -479,7 +479,8 @@
     <vertx.version>3.9.0</vertx.version>
     <junit.version>5.5.2</junit.version>
     <rest-assured.version>3.3.0</rest-assured.version>
-    <folio-service-tools.version>1.4.4-SNAPSHOT</folio-service-tools.version>
+    <folio-service-tools.version>1.5.0</folio-service-tools.version>
+    <mod-custom-fields.version>1.4.0</mod-custom-fields.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
   </properties>
 </project>
