--- a/pom.xml
+++ b/pom.xml
@@ -474,13 +474,13 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>30.0.2</raml-module-builder.version>
+    <raml-module-builder.version>30.1.0</raml-module-builder.version>
     <generate_routing_context>/users</generate_routing_context>
     <vertx.version>3.9.1</vertx.version>
     <junit.version>5.5.2</junit.version>
     <rest-assured.version>3.3.0</rest-assured.version>
-    <folio-service-tools.version>1.5.0</folio-service-tools.version>
-    <mod-custom-fields.version>1.4.0</mod-custom-fields.version>
+    <folio-service-tools.version>1.5.1</folio-service-tools.version>
+    <mod-custom-fields.version>1.4.1-SNAPSHOT</mod-custom-fields.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
   </properties>
 </project>
