--- a/ramls/examples/department.sample
+++ b/ramls/examples/department.sample
@@ -1,8 +1,6 @@
 {
   "id": "b4b5e97a-0a99-4db9-97df-4fdf406ec74d",
-  "type": "departments",
-  "attributes": {
-    "name": "Accounting",
-    "code": "ACC"
-  }
+  "name": "Accounting",
+  "code": "ACC",
+  "usageNumber": 10
 }
