--- a/ramls/examples/departmentCollection.sample
+++ b/ramls/examples/departmentCollection.sample
@@ -2,19 +2,15 @@
   "departments": [
     {
       "id": "b4b5e97a-0a99-4db9-97df-4fdf406ec74d",
-      "type": "departments",
-      "attributes": {
-        "name": "Accounting",
-        "code": "ACC"
-      }
+      "name": "Accounting",
+      "code": "ACC",
+      "usageNumber": 0
     },
     {
       "id": "4bb563d9-3f9d-4e1e-8d1d-04e75666d68f",
-      "type": "departments",
-      "attributes": {
-        "name": "History",
-        "code": "HIS"
-      }
+      "name": "History",
+      "code": "HIS",
+      "usageNumber": 2
     }
   ],
   "totalRecords": 2
