--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>17.2.0-SNAPSHOT</version>
+  <version>17.2.0</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -350,13 +349,13 @@
             <configuration>
               <target>
                 <replace token="baseUri: http://github.com/org/folio/mod-users" value="baseUri: http://localhost:{http.port}" dir="${basedir}/target/classes/apidocs/raml">
-                  <include name="**/*.raml"/>
+                  <include name="**/*.raml" />
                 </replace>
                 <replace token="protocols: [ HTTPS ]" value="protocols: [ HTTP ]" dir="${basedir}/target/classes/apidocs/raml">
-                  <include name="**/*.raml"/>
+                  <include name="**/*.raml" />
                 </replace>
                 <replace token="../.." value="../raml-util" dir="${basedir}/target/classes/apidocs/raml">
-                  <include name="**/*.raml"/>
+                  <include name="**/*.raml" />
                 </replace>
               </target>
             </configuration>
@@ -407,7 +406,7 @@
                   </manifestEntries>
                 </transformer>
               </transformers>
-              <artifactSet/>
+              <artifactSet />
               <outputFile>${project.build.directory}/${project.artifactId}-fat.jar</outputFile>
               <filters>
                 <!-- this required to fix module logging -->
@@ -501,7 +500,7 @@
     <url>https://github.com/folio-org/mod-users</url>
     <connection>scm:git:git://github.com:folio-org/mod-users.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/mod-users.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v17.2.0</tag>
   </scm>
 
   <properties>
