--- a/pom.xml
+++ b/pom.xml
@@ -517,8 +517,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <raml-module-builder.version>32.0.0-SNAPSHOT</raml-module-builder.version>
-    <vertx.version>4.0.0.CR2</vertx.version>
+    <raml-module-builder.version>32.0.0</raml-module-builder.version>
+    <vertx.version>4.0.0</vertx.version>
     <generate_routing_context>/users</generate_routing_context>
     <junit.version>5.5.2</junit.version>
     <rest-assured.version>3.3.0</rest-assured.version>
