--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-web</artifactId>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.jsoup</groupId>
