--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,12 @@
     </dependency>
 
     <!-- test dependencies -->
-
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>4.0.3</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
