Use test containers instead of embedded PostgreSQL where possible MODUSERS-255
Leaving the invocations to stop embedded PostgreSQL in tests,
as the replacement to stop any tester implementation is not provided
until 33.x

Cannot change the tests that use the base class provided from
folio service tools, as that always uses embedded PostgreSQL

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
+      <artifactId>postgres-testing</artifactId>
+      <version>${raml-module-builder.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
       <artifactId>folio-service-tools-test</artifactId>
       <version>${folio-service-tools.version}</version>
       <scope>test</scope>
