--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>18.1.1</version>
+  <version>18.1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <licenses>
